# elot

./: .gitattributes  .gitignore  CITATION.cff  CLI-VS-CODE-PLAN.org  ELOT-DB-PLAN.org  ELPA-SUBMISSION-PLAN.org  Maintenance.omn  Makefile  README-global-label-display.org  README.md  README.org  REFACTORING.org  bfo-core.org  cli_runner.el  elot-defs.org  elot-init.el  elot-label-display.org  elot-lob.org  elot-mode.org  elot-run.ps1  elot-run.sh  elot-tangling.org  elot-template.org  elot.el  llm-prompt.org  maintenance.html  maintenance.org  o3-research-comparing-elot.md  o3-research-elot-llm-assistant.md  pizza.org  setup.ps1  setup.sh
documentation/: ATT30846.emacs  README.md  README.org  elot-gptel.org  elot-id.org  readme_installation.md  readme_usingELOT.md
elot-package/: MELPA-RECIPE  elot-conventions.md  elot-db.el  elot-defaults.el  elot-export.el  elot-flymake.el  elot-gptel.el  elot-id-insert.el  elot-id-move.el  elot-id-rename.el  elot-id.el  elot-label-display.el  elot-lint.el  elot-lob.org  elot-mode.el  elot-nav.js  elot-owl-grammar.el  elot-robot.el  elot-sources.el  elot-style.css  elot-tangle.el  elot.el  schema.sql  theme-elot.setup
examples/: .gitignore  61970-600-2_Equipment-AP-Voc-RDFS2020_v3-0-0.org  DLP_397_all.org  DOLCE-Lite.org  Makefile  README.md  README.org  bfo-core.md  bfo-core.org  cl-basic.org  generate-roundtrip-report.sh  gistCore.org  maintenance.org  manchester-syntax-quick-reference.omn  manchester-syntax-quick-reference.org  (+9 more)
tools/elot-cli/elot-orgize/: Cargo.toml
tools/elot-cli/elot-orgize/src/: lib.rs  parse.rs  types.rs
(+350 files in other folders)
